--- a/boring/Cargo.toml
+++ b/boring/Cargo.toml
@@ -65,6 +65,7 @@ kx-client-pq-preferred = ["kx-safe-default", "kx-client-pq-supported"]
 kx-client-nist-required = ["kx-safe-default"]
 
 [dependencies]
+brotli = "3.4.0"
 bitflags = { workspace = true }
 foreign-types = { workspace = true }
 once_cell = { workspace = true }
