--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -25,20 +25,8 @@ fips = ["tokio-boring/fips"]
 # Link with precompiled FIPS-validated `bcm.o` module.
 fips-link-precompiled = ["tokio-boring/fips-link-precompiled"]
 
-# Enables Raw public key API (https://datatracker.ietf.org/doc/html/rfc7250)
-rpk = ["tokio-boring/rpk"]
-
 # Enables experimental post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
 pq-experimental = ["tokio-boring/pq-experimental"]
-
-# Disables git patching of the BoringSSL sources for features like `rpk` and `pq-experimental`, but
-# keeps the related Rust API. 
-# 
-# Supposed to be used with either pre-compiled BoringSSL (via `BORING_BSSL_PATH` env variable) or 
-# with custom BoringSSL sources (via `BORING_BSSL_SOURCE_PATH` env variable) already containing 
-# required patches.
-no-patches = ["tokio-boring/no-patches"]
-
 
 [dependencies]
 antidote = { workspace = true }
@@ -52,6 +40,6 @@ tokio-boring = { workspace = true }
 tower-layer = { workspace = true }
 
 [dev-dependencies]
-hyper = { workspace = true }
-tokio = { workspace = true }
+hyper = { workspace = true, features = [ "full" ] }
+tokio = { workspace = true, features = [ "full" ] }
 futures = { workspace = true }
